[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Tavern/TavernScreen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Tavern/MainHall.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UserInterface/Buttons/GameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Tavern/Buttons/EnterScreenBtn.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Tavern/RoomScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Tavern/WizardScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Tavern/TradesmanScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Tavern/PublicanScreen.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Tavern/Resources/TavernResources.gd" type="Script" id=9]
[ext_resource path="res://Fonts/SHPinsher_16.tres" type="DynamicFont" id=10]
[ext_resource path="res://Objects/StatsPanel/StatsPanel.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/UserInterface/AnimatedCheckButton.tscn" type="PackedScene" id=13]

[node name="TavernScreen" type="CanvasLayer"]
layer = 14
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.360784, 0.286275, 0.286275, 1 )

[node name="MainHall" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MainHall"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -89.0
margin_bottom = 51.0
size_flags_horizontal = 8
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RevivalEnterBtn" parent="MainHall/VBoxContainer" instance=ExtResource( 13 )]
margin_left = 8.0
margin_right = 89.0
size_flags_horizontal = 8

[node name="RevivalEnterLabel" type="Label" parent="MainHall/VBoxContainer"]
margin_top = 31.0
margin_right = 89.0
margin_bottom = 51.0
size_flags_horizontal = 5
custom_fonts/font = ExtResource( 10 )
text = "Przywolaj diabla"
align = 2

[node name="ExitDoorBtn" parent="MainHall" instance=ExtResource( 3 )]
margin_left = 26.3486
margin_top = 251.654
margin_right = 138.349
margin_bottom = 279.654
button_label = "Wyjdz"

[node name="EnterWizardBtn" parent="MainHall" instance=ExtResource( 4 )]
margin_left = 234.892
margin_top = 188.085
margin_right = 346.892
margin_bottom = 216.085
button_label = "Mag"
screen_name = "WizardScreen"

[node name="EnterRoomBtn" parent="MainHall" instance=ExtResource( 4 )]
visible = false
margin_left = 388.712
margin_top = 117.873
margin_right = 500.712
margin_bottom = 145.873
button_label = "Pokoj"
screen_name = "RoomScreen"

[node name="EnterTradesmanBtn" parent="MainHall" instance=ExtResource( 4 )]
margin_left = 94.6058
margin_top = 122.198
margin_right = 206.606
margin_bottom = 150.198
button_label = "Handlarz"
screen_name = "TradesmanScreen"

[node name="EnterPublicanBtn" parent="MainHall" instance=ExtResource( 4 )]
margin_left = 231.739
margin_top = 45.3357
margin_right = 343.739
margin_bottom = 73.3357
button_label = "Karczmarka"
screen_name = "PublicanScreen"

[node name="RoomScreen" parent="." instance=ExtResource( 5 )]
visible = false

[node name="WizardScreen" parent="." instance=ExtResource( 6 )]
visible = false

[node name="TradesmanScreen" parent="." instance=ExtResource( 7 )]
visible = false

[node name="PublicanScreen" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Resources" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="Resources"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Resources/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 66.0
margin_bottom = 40.0

[node name="GoldLabel" type="Label" parent="Resources/MarginContainer/VBoxContainer"]
margin_right = 56.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 10 )
text = "Zloto: 100"

[node name="XpLabel" type="Label" parent="Resources/MarginContainer/VBoxContainer"]
visible = false
margin_top = 24.0
margin_right = 107.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 10 )
text = "Doswiadczenie: 100"

[node name="StatsPanel" parent="." instance=ExtResource( 11 )]
margin_left = 360.525
margin_top = 168.461
margin_right = 360.525
margin_bottom = 168.461
[connection signal="pressed" from="MainHall/VBoxContainer/RevivalEnterBtn" to="." method="_on_RevivalEnterBtn_pressed"]
[connection signal="pressed" from="MainHall/ExitDoorBtn" to="." method="_on_ExitDoorBtn_pressed"]
